--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 	font-family: "KyivTypeTilting";
 	font-size: 100px;
 	
-	background-color: #000000;
+	background-color: #cdd4cd;
 	color: #ffffff;
   }
 
