--- a/css/main.css
+++ b/css/main.css
@@ -4,17 +4,18 @@
   }
 
   body {
-    height: 200vh;
-	font-family: "KyivTypeTilting";
-	font-size: 100px;
+    height: 100vh;
+	  font-family: "KyivTypeTilting";
+	  font-size: 2.5rem;
 	
-	background-color: #cdd4cd;
-	color: #ffffff;
+	  background-color: #cdd4cd;
+	  color: #ffffff;
   }
 
-  h1 {
+  .homepage {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-family: "KyivTypeTilting";
   }
