--- a/css/main.css
+++ b/css/main.css
@@ -4,18 +4,26 @@
   }
 
   body {
-    height: 100vh;
+    margin: 0;
 	  font-family: "KyivTypeTilting";
-	  font-size: 2.5rem;
-	
-	  background-color: #cdd4cd;
+    font-size: 2.5rem;
 	  color: #ffffff;
   }
 
   .homepage {
-    position: fixed;
+    height: 50vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #cdd4cd;
+    position: relative;
+    
+    font-family: "KyivTypeTilting";
+  }
+
+  .homepage .title {
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-family: "KyivTypeTilting";
   }
